Changed function from show_students to get_students_str.

--- a/Урок 28-34. Функции. Модули/Python - HW34.html
+++ b/Урок 28-34. Функции. Модули/Python - HW34.html
@@ -68,13 +68,14 @@
 ...</code></pre>
             </div>
           </li>
-          <li>Реализуйте через функцию <span class="function"><b>show_students</b></span>:
+          <li>Реализуйте через функцию <span class="function"><b>get_students_str</b></span>:
             <ul>
               <li>Функция принимает <span class="hl-text">список студентов</span>.</li>
               <li>Применяет функцию <span class="function"><b>student_to_str</b></span> (см. ниже) для каждого студента.
               </li>
-              <li>Выводит в консоль <span class="hl-text">полученную строку от вызванной функции</span>.</li>
-              <li>Ничего <span class="hl-text">не возвращает</span>.</li>
+              <li>Строковое представление студента <span class="hl-text">добавляет в новый список</span>.</li>
+              <li>Возвращает <span class="hl-text">список студентов, который содержит их строковое представление</span>.
+              </li>
             </ul>
           </li>
           <li>Реализуйте функцию <span class="function"><b>student_to_str</b></span>:
@@ -330,7 +331,7 @@
             </div>
           </li>
           <li>Если программа никого не нашла, то она <span class="hl-text">сообщает об этом в консоли</span>.</li>
-          <li>Реализуйте с помощью функции <span class="function"><b>show_students</b></span> и через функцию <span
+          <li>Реализуйте с помощью функции <span class="function"><b>get_students_str</b></span> и через функцию <span
               class="function"><b>filter_students</b></span>:
             <ul>
               <li>Функция принимает <span class="hl-text">список студентов</span>, <span class="hl-text">фамилию</span>
