--- a/Урок 51-58. Tkinter/Python - PT52/Python - PT52.html
+++ b/Урок 51-58. Tkinter/Python - PT52/Python - PT52.html
@@ -186,7 +186,7 @@
     <div class="right-block">
       <div class="right-rect">
         <h2>Практическое Задание 52.1</h2>
-        <p>Дополните код, указанный ниже, ещё двумя полями - <span class="hl-text">фамилией</span> и <span class="hl-text">возрастом</span>. Также измените код <span class="hl-text">изменения клиента в бэкенде</span>, а во <span class="hl-text">фронтенде добавление</span>, <span class="hl-text">изменение</span>, <span class="hl-text">показ данных клиента</span>.</p>
+        <p>Дополните код, указанный ниже, ещё двумя полями – <span class="hl-text">фамилией</span> и <span class="hl-text">возрастом</span>. Также измените код <span class="hl-text">изменения клиента в бэкенде</span>, а во <span class="hl-text">фронтенде добавление</span>, <span class="hl-text">изменение</span>, <span class="hl-text">показ данных клиента</span>.</p>
         <h3>Код:</h3>
         <div class="console">
           <button class="copy-button" onclick="copyCode(this)"><svg xmlns="http://www.w3.org/2000/svg" width="15" height="15" fill="none" viewBox="0 0 24 24" class="icon-sm">
