Added theme to FP.

--- a/Урок 49-50. Разбор финальных проектов/Python - FP.html
+++ b/Урок 49-50. Разбор финальных проектов/Python - FP.html
@@ -28,7 +28,7 @@
           <li>Определиться с финальным проектом. Выбрать из предложенного, либо свой вариант. <span class="hl-text">Не
               игра, а сервисное приложение</span>.</li>
           <li>Бэкенд должен быть реализован с помощью <span class="hl-text">ООП</span> (использовать <span
-              class="hl-text">абстракцию</span> - классы, поля и методы, а также <span
+              class="hl-text">абстракцию</span> – классы, поля и методы, а также <span
               class="hl-text">инкапсуляцию</span>), и используя его, можно составить приложение даже для консоли.</li>
           <li>Реализованы <span class="hl-text">добавление</span>, <span class="hl-text">поиск</span>, <span
               class="hl-text">изменение</span> и <span class="hl-text">удаление данных</span> из базы данных.</li>
@@ -50,9 +50,10 @@
           <li>Касса заправки</li>
           <li>Касса общепита</li>
           <li>Касса сборки ПК</li>
-          <li>Касса кинотеатра</li>
+          <li>Касса билетов на кинотеатр</li>
+          <li>Касса билетов на футбол</li>
+          <li>Касса билетов на самолёт</li>
           <li>Касса вооружения</li>
-          <li>Касса авиабилетов</li>
           <li>Касса частного образовательного учреждения</li>
           <li>Касса экскурсий</li>
           <li class="no-padding-bottom">Касса автомастерской</li>
