Updated Lesson FP and Lessons53-60.

--- a/Урок 49-50. Разбор финальных проектов/Python - FP.html
+++ b/Урок 49-50. Разбор финальных проектов/Python - FP.html
@@ -69,8 +69,9 @@
           <li>Аренда места на складе</li>
           <li>Абонемент в спортзал</li>
           <li>Аренда недвижимости</li>
+          <li>Аренда квартиры</li>
           <li>Аренда спецтехники</li>
-          <li class="no-padding-bottom">Оформление аренды спортивного инвентаря (например, лыж, сноубордов) на
+          <li class="no-padding-bottom">Аренда спортивного инвентаря (например, лыж, сноубордов) на
             горнолыжном курорте</li>
         </ol>
         <h3>Темы для финального проекта по категории "Роли":</h3>
