--- a/Урок 53-60. Tkinter/Python - HW56/Python - HW56.html
+++ b/Урок 53-60. Tkinter/Python - HW56/Python - HW56.html
@@ -4,77 +4,10 @@
   <title>Python - HW56</title>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100..900&family=JetBrains+Mono:ital,wght@0,100..800;1,100..800&display=swap" rel="stylesheet">
-  <style>
-    body {
-      background: linear-gradient(to right, #333333 0%, #404040 57%, #363636 100%);
-      color: #fff;
-      font-family: "Inter", sans-serif;
-      margin: 0px;
-    }
-
-    .container {
-      display: flex;
-      flex-direction: row;
-    }
-
-    .sidebar {
-      width: 240px;
-      height: 280px;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      box-sizing: border-box;
-      position: sticky;
-      top: 0;
-    }
-
-    .sidebar img {
-      height: 240px;
-      width: 240px;
-    }
-
-    .sidebar #copyrights {
-      background: linear-gradient(to right, #343434 0%, #363636 100%);
-      -webkit-background-clip: text;
-      color: transparent;
-    }
-
-    .right-block {
-      flex: 1;
-      width: 70%;
-      gap: 50px;
-      box-sizing: border-box;
-      display: flex;
-      flex-direction: column;
-      padding: 50px 25px 50px 0;
-      margin: 10px;
-    }
-
-    .right-rect {
-      background-color: rgba(38, 38, 38, 0.75);
-      box-shadow: 10px 10px 15px rgba(0, 0, 0, 0.6);
-      padding: 30px 25px;
-      border-radius: 10px;
-    }
-
-    .right-rect h2,
-    .right-rect .hl-text {
-      margin: 0;
-      color: #FFC000;
-    }
-
-    .right-rect h3 {
-      margin-top: 40px;
-      margin-bottom: 0px;
-      color: #FFC000;
-    }
-
-    p {
-      margin-top: 15px;
-      margin-bottom: 0px;
-    }
-  </style>
+  <link
+    href="https://fonts.googleapis.com/css2?family=Inter:wght@100..900&family=JetBrains+Mono:ital,wght@0,100..800;1,100..800&display=swap"
+    rel="stylesheet">
+  <link rel="stylesheet" href="https://shikonohito.github.io/Python_Bootcamp/styles/hw.css">
 </head>
 
 <body>
@@ -86,25 +19,38 @@
     <div class="right-block">
       <div class="right-rect">
         <h2>Домашнее Задание 56.1</h2>
-        <p>Создайте класс <span class="hl-text">"Таксист"</span>. Этот класс должен <span class="hl-text">хранить поля для идентификатора</span>, <span class="hl-text">имени</span>, <span class="hl-text">фамилии</span> и <span class="hl-text">списка оценок</span>.
-          <br>Для класса определите <span class="hl-text">строковое представление</span>, <span class="hl-text">конструктор</span> и <span class="hl-text">свойства</span>.
+        <p>Создайте класс <span class="hl-text">"Таксист"</span>. Этот класс должен <span class="hl-text">хранить поля
+            для идентификатора</span>, <span class="hl-text">имени</span>, <span class="hl-text">фамилии</span> и <span
+            class="hl-text">списка оценок</span>.
+          <br>Для класса определите <span class="hl-text">строковое представление</span>, <span
+            class="hl-text">конструктор</span> и <span class="hl-text">свойства</span>.
           <br>Для класса определите <span class="hl-text">метод добавления оценки в список оценок</span>.
           <br>Для класса определите <span class="hl-text">метод получения средней арифметической оценки</span>.
         </p>
 
-        <p>Создайте класс <span class="hl-text">"База данных таксистов"</span>. Этот класс должен <span class="hl-text">хранить поле для списка таксистов</span>.
+        <p>Создайте класс <span class="hl-text">"База данных таксистов"</span>. Этот класс должен <span
+            class="hl-text">хранить поле для списка таксистов</span>.
           <br>Для класса определите <span class="hl-text">свойство</span>.
           <br>Реализуйте <span class="hl-text">CRUD</span>.
           <br>Для класса определите <span class="hl-text">метод добавления оценки по идентификатору таксиста</span>.
-          <br>Для класса определите <span class="hl-text">метод получения средней арифметической оценки по идентификатору таксиста</span>.
+          <br>Для класса определите <span class="hl-text">метод получения средней арифметической оценки по
+            идентификатору таксиста</span>.
         </p>
       </div>
       <div class="right-rect">
         <h2>Домашнее Задание 56.2</h2>
-        <p>Создайте <span class="hl-text">визуальное приложение</span> для работы с классами из <span class="hl-text">Домашнего Задания 56.1</span>. В приложении должна быть возможность <span class="hl-text">добавить нового таксиста</span>, <span class="hl-text">показать</span>, <span class="hl-text">изменить</span> и <span class="hl-text">удалить таксиста</span>. Также должна быть возможность <span class="hl-text">выбрать таксиста в списке</span> и <span class="hl-text">отдельно добавить ему оценку</span>. Визуальное приложение должно содержать <span class="hl-text">Label</span>, <span class="hl-text">Entry</span>, <span class="hl-text">Button</span>, <span class="hl-text">Listbox</span>.</p>
+        <p>Создайте <span class="hl-text">визуальное приложение</span> для работы с классами из <span
+            class="hl-text">Домашнего Задания 56.1</span>. В приложении должна быть возможность <span
+            class="hl-text">добавить нового таксиста</span>, <span class="hl-text">показать</span>, <span
+            class="hl-text">изменить</span> и <span class="hl-text">удалить таксиста</span>. Также должна быть
+          возможность <span class="hl-text">выбрать таксиста в списке</span> и <span class="hl-text">отдельно добавить
+            ему оценку</span>. Визуальное приложение должно содержать <span class="hl-text">Label</span>, <span
+            class="hl-text">Entry</span>, <span class="hl-text">Button</span>, <span class="hl-text">Listbox</span>.</p>
         <h3>Вид программы:</h3>
         <p><img src="https://i.imgur.com/3ed1fDK.png" alt="File location" height="480"></p>
       </div>
     </div>
   </div>
+  <script src="https://shikonohito.github.io/Python_Bootcamp/scripts/copyButton.js"></script>
+  <script src="https://shikonohito.github.io/Python_Bootcamp/scripts/highlighter.js"></script>
 </body>
